# indicator_based_trading

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPROVEMENT_PLAN.md  Procfile  README.md  alerts.py  analysis_data.db  analysis_service.py  app.py  auto_trade.py  backtest.py  config.py  daily_runner.py  data_store.py  db.py  flyers_integration.py  fyers_integration.py  indicators.py  jobs.py  llm_analyzer.py  main.py  manage.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  security.py  strategy.py  test_gemini.py  worker.py  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  auth.py  errors.py  extensions.py
app/routes/: __init__.py  analysis.py  auth_routes.py  chat.py  data.py  meta.py
deploy/: deploy.sh  indicators.service  nginx.conf
docs/: ARCHITECTURE.md
static/css/: components.css  main.css
static/js/: api.js  app.js  charts.js  chat.js  detail.js  disclaimer.js  format.js  indicators.js  modal.js  theme.js  toast.js  view.js  watchlist.js
templates/: index.html
tests/: conftest.py  test_app.py  test_indicators.py
